css/styles.css
/* Wireframing */

*:not(body):not(html) {
  box-sizing:border-box;
  /*border:1px dashed grey;*/
}

.col, .header{
  min-height: 200px;
}

.portfolio-item {
  /*background-color: #febaef;*/
  /*background-color: #cc0639;*/
}
/* colors
Darkest Blue: #242d33;
Parchment: #fefcf7;

/* End Wireframing */

/*Nav*/

.nav {
  overflow: auto;
  padding: 1%;
  margin: 0 0 140px 0;
  width: 100%;
  font-family: Gill Sans / Gill Sans MT, sans-serif;
  text-transform: uppercase;
  background-color: #fffdfa;
  color: #242d33;
  border: 1px solid #242d33;
}

.title {
  float: left;
}

.navlinks {
  float: right;
  margin: 0;
  padding: 0;
}

.navlinks li {
  float: left;
  margin: -1px 0 0 10px;
  list-style: none;
}

/* Body*/

body {
  font-family: sans-serif;
  color: #242d33;
  /*color: #584d45;*/
  background-color: #fffdfa;
}

h1 {
  margin: 45px 0 0 0;
  font-size: 3em;
  font-family: 'Vollkorn Regular', sans-serif;
  font-weight: normal;
}

h2 {
  font-family: Gill Sans / Gill Sans MT, sans-serif;
  text-transform: uppercase;
  font-weight: normal;
  font-size: .75em;
  letter-spacing: 1px;
}

h3 {
  font-family: Gill Sans / Gill Sans MT, sans-serif;
  text-transform: uppercase;
  margin: -4px 0 0 0;
  font-size: 1em;
  font-weight: normal;
}

.articles-main a {
  font-size: 1em;
  font-family: 'Vollkorn Regular', sans-serif;
  font-weight: bold;
  text-decoration: none;
}

.articles-main p {
  margin-bottom: 25px;
  font-size: .9em;
  font-family: 'Vollkorn Regular', sans-serif;
  font-style: italic;
}

a {
  color: #363636;
}

.container {
  width: 90%;
  margin: auto;
  padding: 0 2% 2% 2%;
}

.caps {
  text-transform: uppercase;
}

.small-text {
  font-size: .9em;
}

.center {
  text-align: center;
}

.responsive-img {
  width: 100%;
}

.masthead {
  width: 100%;
  min-height: 150px;
  text-align: center;
  margin: 0;
}

#main-logo {
  margin: 10px auto;
}

.see-work {
  text-align: center;
  margin-bottom: 350px;
}

.see-work a {
  text-decoration: none;
}

#front-page-portfolio {
  text-align: center;
  text-transform: uppercase;
  min-height: 20px;
}

/* Gallery */

.portfolio-gallery {
  margin-top: 10px;
  font-family: Gill Sans / Gill Sans MT, sans-serif;
}

.portfolio-gallery::after {
  content: "";
  display: table;
  clear: both;
}

.col {
  float: left;
  width: 31.33%;
  margin: 0 1%;
}

.portfolio-item {
  width: 100%;
  margin-bottom: 75px;
  position: relative;
  background-color: #141414;
  opacity: .9;
  overflow: hide;
}

.portfolio-item:hover {
  opacity: 1;
  -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.portfolio-item img {
  width: 100%;
}

.item-label {
  position: absolute;
  bottom: -40px;
  left: 0;
  width: 100%;
  height: 50px;
  background-color: #191919;
  border-top: 3px solid #fff;
  color: #fff;
  opacity: 1;
  padding: 7px 5px 5px 10px;
}

.item-label h1, .item-info h1 {
  font-family: sans-serif;
  font-size: .8em;
  margin: 0;
  padding: 0;
}

.item-info h1 {
  text-transform: uppercase;
}

.item-label p {
  font-size: .8em;
  margin: 0;
}

.item-x-toggle {
  font-size: 1.3em;
  position: absolute;
  right: 20px;
  bottom: 10px;
}

.item-x-rotated {
  -webkit-transform: rotate(45deg);  /* Chrome, Safari 3.1+ */
    -moz-transform: rotate(45deg);  /* Firefox 3.5-15 */
    -ms-transform: rotate(45deg);  /* IE 9 */
    -o-transform: rotate(45deg);  /* Opera 10.50-12.00 */
    transform: rotate(45deg);  /* Firefox 16+, IE 10+, Opera 12.10+ */
}

.item-label a {
  color: #fff;
}

.item-info {
  display: none;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #fffdfa;
  border: 2px solid #ededed;
  color: #363636;
  opacity: 1;
  padding: 5%;
}

/*.vert-item {
  max-height: 400px;
}

.horiz-item {
  max-height: 400px;
}*/

.horiz-item .item-info {
  font-size: .9em;
  padding: 2%;
}

#contact-page {
  display: none;
}

/* About Page Items */

.about-main {
  width: 60%;
}

/* Articles */

.article {
  width: 60%;
  margin: 0 auto;
}

.article h1 {
  font-size: 2em;
}

.article h2 {
  margin-bottom: 40px;
}

/* Media Queries */
/* media query for all screens that are smaller than laptops */
@media screen and (max-width: 976px) {
  .portfolio-item {
    opacity: 1;
  }

  .about-main {
    width: 90%;
    margin: 0 auto;
  }

  .article {
    width: 90%;
    margin: 0 auto;
  }
}

@media screen and (max-width: 976px) and (min-width: 541px) {
  .col {
    width: 48%;
  }

  .vert-item {
    max-height: 320px;
  }

  .col3 {
    width: 100%;
    float: none;
    overflow: visible;;
  }

  .col3 .vert-item {
    float: left;
    width: 48%;
    margin: 0 1% 0 0;
  }

  .col3 .horiz-item {
    float: left;
    width: 48%;
    margin: 0 0 0 1%;
  }

  .stripe {
    width: 1000px;
    bottom: 40%;
    right: -40%;
  }

  #contact {
    margin-top: 30%;
  }
}

@media screen and (max-width:540px) {
  .col {
    float: none;
    width: 100%;
  }

  .title {
    display: none;
  }

  .nav {
    border: 0;
    background-color: rgba(255, 0, 0, 0);
    margin-bottom: 50px;
  }

  .navlinks {
    float: none;
    text-align: center;
  }

  .navlinks a {
    text-decoration: none;
  }

  .navlinks li {
    min-height: 30px;
    float: none;
    margin-left: 0;
    margin-bottom: 8px;
    font-size: 1.2em;
    background-color: rgba(255, 255, 255, 0.5);
    border: 1px solid #242d33;
  }

  .item-label p {
    font-size: .7em;
  }

  .article {
    width: 100%;
    margin: 0 auto;
  }

}

@media screen and (max-width: 350px) {
  .vert-item {
    max-height: 280px;
  }

  .horiz-item {
    min-height: 200px;
  }

  .horiz-item img {
    margin-top: 15%;
  }
}


/* Fix nav display bug that occurs when resizing browser window*/
@media screen and (min-width: 541px) {
  .navlinks li {
    display: inline;
  }
}

/* Limit grid sizing on extra large screens */
@media screen and (min-width: 1300px) {
  .container {
    max-width: 1333px;
  }
}

